[package]
name = "packet_sniffer"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "1.3.0"
etherparse = "0.13"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
dotenv = "0.15.0"
eframe = { version = "0.24", features = ["default_fonts"] }
chrono = "0.4"
rfd = "0.12"
env_logger = "0.10"
winapi = { version = "0.3", features = ["winuser"] }
